modules/eks/manifests/consul-manifests/consul-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: consul-nginx
  namespace: consul
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/enable-external-authorization: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: consuleks.dianatop.lat
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: consul-consul-connect-injector
                port:
                  number: 8500
